--- a/markers/templates/map.html
+++ b/markers/templates/map.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Markers Map</title>
+    <title>Property Markers Map</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"/>
